# qtsolitaire

./: .clang-format  .gdbinit  .gdbinit.py  CMakeLists.txt  README.md  mainresources.qrc  qtsolitaire.pro
src/: animateditem.cpp  animateditem.h  backgroundwork.h  backgroundwork_concurrent.h  carditem.cpp  carditem.h  game.cpp  game.h  gamestartview.cpp  gamestartview.h  gamestate.cpp  gamestate.h  main.cpp  mainresources.qrc  mainwindow.cpp  mainwindow.h  pileitem.cpp  pileitem.h  solitairewidge.cpp  solitairewidget.cpp  solitairewidget.h
